# kudosx

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: skill-adder.md
.claude/commands/: add-skill.md  commit-code.md
.github/workflows/: ci.yml  publish.yml
agents/: designer.md
claude-documents/: README.md
claude-plugin/skills/product-meridex/: SKILL.md
docs/: FEATURES.md  RELATED_RESOURCES.md
docs/claude-documents/: MCP_CHROME_DEVTOOLS.md  TIPS.md
docs/process/: CREATE_ACCOUNT.md
docs/spec/: CLI.md  EXPLORE_TABS.md  FOOTER_BAR.md  HEADER_BAR.md  VERSION_MANAGEMENT.md  VIEW_AGENTS.md  VIEW_COMMANDS.md  VIEW_SKILLS.md  VIEW_USAGE.md
kudo/: __init__.py  cli.py
kudo/commands/: cloud.py  search.py  software.py
kudosx/: __init__.py  cli.py
kudosx/commands/: __init__.py  add.py  cloud.py  explore.py  init.py  list.py  remove.py  repo.py  search.py  software.py  update.py
kudosx/repo/: __init__.py  skills.yaml
kudosx/templates/v1/.claude/agents/: designer.md  engineer.md  product.md
kudosx/templates/v1/technical-design/references/: mermaidjs-best-practices.md  mermaidjs.md
kudosx/templates/v1/technical-design/scripts/: pyproject.toml  render_mermaid_diagram.py
kudosx/utils/: banner.py  claude_usage.py  version.py
roz/commands/: __init__.py
tests/: __init__.py  test_cli.py  test_explore.py  test_version.py
