[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kudosx"
version = "0.3.1"
description = "Kudosx - An AI software team that builds products with industry standard practices."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kudosx Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "click>=8.3.1",
    "pillow>=12.0.0",
    "pyyaml>=6.0.0",
    "textual>=6.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=4.0.0",
]

[project.scripts]
kudosx = "kudosx.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kudosx*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.md"]
kudosx = ["content/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
